y.output
Grammar

    0 $accept: Start $end

    1 Start: Program

    2 Program: %empty
    3        | Program FuncDef

    4 FuncDef: T_Int FuncName Args Vars Stmts EndFuncDef
    5        | T_Void FuncName Args Vars Stmts EndFuncDef

    6 FuncName: T_Identifier

    7 Args: '(' ')'
    8     | '(' _Args ')'

    9 _Args: T_Int T_Identifier
   10      | _Args ',' T_Int T_Identifier

   11 Vars: _Vars

   12 _Vars: '{'
   13      | _Vars Var ';'

   14 Var: T_Int T_Identifier
   15    | Var ',' T_Identifier

   16 Stmts: %empty
   17      | Stmts Stmt

   18 EndFuncDef: '}'

   19 Stmt: AssignStmt
   20     | CallStmt
   21     | IfStmt
   22     | WhileStmt
   23     | BreakStmt
   24     | ContinueStmt
   25     | ReturnStmt
   26     | PrintStmt

   27 AssignStmt: T_Identifier '=' Expr ';'

   28 CallStmt: CallExpr ';'

   29 IfStmt: If '(' Expr ')' Then '{' Stmts '}' EndThen EndIf
   30       | If '(' Expr ')' Then '{' Stmts '}' EndThen T_Else '{' Stmts '}' EndIf

   31 If: T_If

   32 Then: %empty

   33 EndThen: %empty

   34 EndIf: %empty

   35 WhileStmt: While '(' Expr ')' Do '{' Stmts '}' EndWhile

   36 While: T_While

   37 Do: %empty

   38 EndWhile: %empty

   39 BreakStmt: T_Break ';'

   40 ContinueStmt: T_Continue ';'

   41 ReturnStmt: T_Return ';'
   42           | T_Return Expr ';'

   43 PrintStmt: T_Print '(' T_StringConstant ')' ';'

   44 Expr: T_IntConstant
   45     | T_Identifier
   46     | Expr '+' Expr
   47     | Expr '-' Expr
   48     | Expr '*' Expr
   49     | Expr '/' Expr
   50     | Expr '%' Expr
   51     | Expr '>' Expr
   52     | Expr '<' Expr
   53     | Expr T_Ge Expr
   54     | Expr T_Le Expr
   55     | Expr T_Eq Expr
   56     | Expr T_Ne Expr
   57     | Expr T_Or Expr
   58     | Expr T_And Expr
   59     | '-' Expr
   60     | '!' Expr
   61     | ReadInt
   62     | CallExpr
   63     | '(' Expr ')'

   64 ReadInt: T_ReadInt '(' T_StringConstant ')'

   65 CallExpr: T_Identifier Actuals

   66 Actuals: '(' ')'
   67        | '(' _Actuals ')'

   68 _Actuals: Expr
   69         | _Actuals ',' Expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 60
    '%' (37) 50
    '(' (40) 7 8 29 30 35 43 63 64 66 67
    ')' (41) 7 8 29 30 35 43 63 64 66 67
    '*' (42) 48
    '+' (43) 46
    ',' (44) 10 15 69
    '-' (45) 47 59
    '/' (47) 49
    ';' (59) 13 27 28 39 40 41 42 43
    '<' (60) 52
    '=' (61) 27
    '>' (62) 51
    '{' (123) 12 29 30 35
    '}' (125) 18 29 30 35
    error (256)
    T_Void (258) 5
    T_Int (259) 4 9 10 14
    T_While (260) 36
    T_If (261) 31
    T_Else (262) 30
    T_Return (263) 41 42
    T_Break (264) 39
    T_Continue (265) 40
    T_Print (266) 43
    T_ReadInt (267) 64
    T_Le (268) 54
    T_Ge (269) 53
    T_Eq (270) 55
    T_Ne (271) 56
    T_And (272) 58
    T_Or (273) 57
    T_IntConstant (274) 44
    T_StringConstant (275) 43 64
    T_Identifier (276) 6 9 10 14 15 27 45 65


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Start (38)
        on left: 1
        on right: 0
    Program (39)
        on left: 2 3
        on right: 1 3
    FuncDef (40)
        on left: 4 5
        on right: 3
    FuncName (41)
        on left: 6
        on right: 4 5
    Args (42)
        on left: 7 8
        on right: 4 5
    _Args (43)
        on left: 9 10
        on right: 8 10
    Vars (44)
        on left: 11
        on right: 4 5
    _Vars (45)
        on left: 12 13
        on right: 11 13
    Var (46)
        on left: 14 15
        on right: 13 15
    Stmts (47)
        on left: 16 17
        on right: 4 5 17 29 30 35
    EndFuncDef (48)
        on left: 18
        on right: 4 5
    Stmt (49)
        on left: 19 20 21 22 23 24 25 26
        on right: 17
    AssignStmt (50)
        on left: 27
        on right: 19
    CallStmt (51)
        on left: 28
        on right: 20
    IfStmt (52)
        on left: 29 30
        on right: 21
    If (53)
        on left: 31
        on right: 29 30
    Then (54)
        on left: 32
        on right: 29 30
    EndThen (55)
        on left: 33
        on right: 29 30
    EndIf (56)
        on left: 34
        on right: 29 30
    WhileStmt (57)
        on left: 35
        on right: 22
    While (58)
        on left: 36
        on right: 35
    Do (59)
        on left: 37
        on right: 35
    EndWhile (60)
        on left: 38
        on right: 35
    BreakStmt (61)
        on left: 39
        on right: 23
    ContinueStmt (62)
        on left: 40
        on right: 24
    ReturnStmt (63)
        on left: 41 42
        on right: 25
    PrintStmt (64)
        on left: 43
        on right: 26
    Expr (65)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 27 29 30 35 42 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 63 68 69
    ReadInt (66)
        on left: 64
        on right: 61
    CallExpr (67)
        on left: 65
        on right: 28 62
    Actuals (68)
        on left: 66 67
        on right: 65
    _Actuals (69)
        on left: 68 69
        on right: 67 69


State 0

    0 $accept: . Start $end

    $default  reduce using rule 2 (Program)

    Start    go to state 1
    Program  go to state 2


State 1

    0 $accept: Start . $end

    $end  shift, and go to state 3


State 2

    1 Start: Program .
    3 Program: Program . FuncDef

    T_Void  shift, and go to state 4
    T_Int   shift, and go to state 5

    $default  reduce using rule 1 (Start)

    FuncDef  go to state 6


State 3

    0 $accept: Start $end .

    $default  accept


State 4

    5 FuncDef: T_Void . FuncName Args Vars Stmts EndFuncDef

    T_Identifier  shift, and go to state 7

    FuncName  go to state 8


State 5

    4 FuncDef: T_Int . FuncName Args Vars Stmts EndFuncDef

    T_Identifier  shift, and go to state 7

    FuncName  go to state 9


State 6

    3 Program: Program FuncDef .

    $default  reduce using rule 3 (Program)


State 7

    6 FuncName: T_Identifier .

    $default  reduce using rule 6 (FuncName)


State 8

    5 FuncDef: T_Void FuncName . Args Vars Stmts EndFuncDef

    '('  shift, and go to state 10

    Args  go to state 11


State 9

    4 FuncDef: T_Int FuncName . Args Vars Stmts EndFuncDef

    '('  shift, and go to state 10

    Args  go to state 12


State 10

    7 Args: '(' . ')'
    8     | '(' . _Args ')'

    T_Int  shift, and go to state 13
    ')'    shift, and go to state 14

    _Args  go to state 15


State 11

    5 FuncDef: T_Void FuncName Args . Vars Stmts EndFuncDef

    '{'  shift, and go to state 16

    Vars   go to state 17
    _Vars  go to state 18


State 12

    4 FuncDef: T_Int FuncName Args . Vars Stmts EndFuncDef

    '{'  shift, and go to state 16

    Vars   go to state 19
    _Vars  go to state 18


State 13

    9 _Args: T_Int . T_Identifier

    T_Identifier  shift, and go to state 20


State 14

    7 Args: '(' ')' .

    $default  reduce using rule 7 (Args)


State 15

    8 Args: '(' _Args . ')'
   10 _Args: _Args . ',' T_Int T_Identifier

    ')'  shift, and go to state 21
    ','  shift, and go to state 22


State 16

   12 _Vars: '{' .

    $default  reduce using rule 12 (_Vars)


State 17

    5 FuncDef: T_Void FuncName Args Vars . Stmts EndFuncDef

    $default  reduce using rule 16 (Stmts)

    Stmts  go to state 23


State 18

   11 Vars: _Vars .
   13 _Vars: _Vars . Var ';'

    T_Int  shift, and go to state 24

    $default  reduce using rule 11 (Vars)

    Var  go to state 25


State 19

    4 FuncDef: T_Int FuncName Args Vars . Stmts EndFuncDef

    $default  reduce using rule 16 (Stmts)

    Stmts  go to state 26


State 20

    9 _Args: T_Int T_Identifier .

    $default  reduce using rule 9 (_Args)


State 21

    8 Args: '(' _Args ')' .

    $default  reduce using rule 8 (Args)


State 22

   10 _Args: _Args ',' . T_Int T_Identifier

    T_Int  shift, and go to state 27


State 23

    5 FuncDef: T_Void FuncName Args Vars Stmts . EndFuncDef
   17 Stmts: Stmts . Stmt

    T_While       shift, and go to state 28
    T_If          shift, and go to state 29
    T_Return      shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Print       shift, and go to state 33
    T_Identifier  shift, and go to state 34
    '}'           shift, and go to state 35

    EndFuncDef    go to state 36
    Stmt          go to state 37
    AssignStmt    go to state 38
    CallStmt      go to state 39
    IfStmt        go to state 40
    If            go to state 41
    WhileStmt     go to state 42
    While         go to state 43
    BreakStmt     go to state 44
    ContinueStmt  go to state 45
    ReturnStmt    go to state 46
    PrintStmt     go to state 47
    CallExpr      go to state 48


State 24

   14 Var: T_Int . T_Identifier

    T_Identifier  shift, and go to state 49


State 25

   13 _Vars: _Vars Var . ';'
   15 Var: Var . ',' T_Identifier

    ','  shift, and go to state 50
    ';'  shift, and go to state 51


State 26

    4 FuncDef: T_Int FuncName Args Vars Stmts . EndFuncDef
   17 Stmts: Stmts . Stmt

    T_While       shift, and go to state 28
    T_If          shift, and go to state 29
    T_Return      shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Print       shift, and go to state 33
    T_Identifier  shift, and go to state 34
    '}'           shift, and go to state 35

    EndFuncDef    go to state 52
    Stmt          go to state 37
    AssignStmt    go to state 38
    CallStmt      go to state 39
    IfStmt        go to state 40
    If            go to state 41
    WhileStmt     go to state 42
    While         go to state 43
    BreakStmt     go to state 44
    ContinueStmt  go to state 45
    ReturnStmt    go to state 46
    PrintStmt     go to state 47
    CallExpr      go to state 48


State 27

   10 _Args: _Args ',' T_Int . T_Identifier

    T_Identifier  shift, and go to state 53


State 28

   36 While: T_While .

    $default  reduce using rule 36 (While)


State 29

   31 If: T_If .

    $default  reduce using rule 31 (If)


State 30

   41 ReturnStmt: T_Return . ';'
   42           | T_Return . Expr ';'

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59
    ';'            shift, and go to state 60

    Expr      go to state 61
    ReadInt   go to state 62
    CallExpr  go to state 63


State 31

   39 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 64


State 32

   40 ContinueStmt: T_Continue . ';'

    ';'  shift, and go to state 65


State 33

   43 PrintStmt: T_Print . '(' T_StringConstant ')' ';'

    '('  shift, and go to state 66


State 34

   27 AssignStmt: T_Identifier . '=' Expr ';'
   65 CallExpr: T_Identifier . Actuals

    '='  shift, and go to state 67
    '('  shift, and go to state 68

    Actuals  go to state 69


State 35

   18 EndFuncDef: '}' .

    $default  reduce using rule 18 (EndFuncDef)


State 36

    5 FuncDef: T_Void FuncName Args Vars Stmts EndFuncDef .

    $default  reduce using rule 5 (FuncDef)


State 37

   17 Stmts: Stmts Stmt .

    $default  reduce using rule 17 (Stmts)


State 38

   19 Stmt: AssignStmt .

    $default  reduce using rule 19 (Stmt)


State 39

   20 Stmt: CallStmt .

    $default  reduce using rule 20 (Stmt)


State 40

   21 Stmt: IfStmt .

    $default  reduce using rule 21 (Stmt)


State 41

   29 IfStmt: If . '(' Expr ')' Then '{' Stmts '}' EndThen EndIf
   30       | If . '(' Expr ')' Then '{' Stmts '}' EndThen T_Else '{' Stmts '}' EndIf

    '('  shift, and go to state 70


State 42

   22 Stmt: WhileStmt .

    $default  reduce using rule 22 (Stmt)


State 43

   35 WhileStmt: While . '(' Expr ')' Do '{' Stmts '}' EndWhile

    '('  shift, and go to state 71


State 44

   23 Stmt: BreakStmt .

    $default  reduce using rule 23 (Stmt)


State 45

   24 Stmt: ContinueStmt .

    $default  reduce using rule 24 (Stmt)


State 46

   25 Stmt: ReturnStmt .

    $default  reduce using rule 25 (Stmt)


State 47

   26 Stmt: PrintStmt .

    $default  reduce using rule 26 (Stmt)


State 48

   28 CallStmt: CallExpr . ';'

    ';'  shift, and go to state 72


State 49

   14 Var: T_Int T_Identifier .

    $default  reduce using rule 14 (Var)


State 50

   15 Var: Var ',' . T_Identifier

    T_Identifier  shift, and go to state 73


State 51

   13 _Vars: _Vars Var ';' .

    $default  reduce using rule 13 (_Vars)


State 52

    4 FuncDef: T_Int FuncName Args Vars Stmts EndFuncDef .

    $default  reduce using rule 4 (FuncDef)


State 53

   10 _Args: _Args ',' T_Int T_Identifier .

    $default  reduce using rule 10 (_Args)


State 54

   64 ReadInt: T_ReadInt . '(' T_StringConstant ')'

    '('  shift, and go to state 74


State 55

   44 Expr: T_IntConstant .

    $default  reduce using rule 44 (Expr)


State 56

   45 Expr: T_Identifier .
   65 CallExpr: T_Identifier . Actuals

    '('  shift, and go to state 68

    $default  reduce using rule 45 (Expr)

    Actuals  go to state 69


State 57

   59 Expr: '-' . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 75
    ReadInt   go to state 62
    CallExpr  go to state 63


State 58

   60 Expr: '!' . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 76
    ReadInt   go to state 62
    CallExpr  go to state 63


State 59

   63 Expr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 77
    ReadInt   go to state 62
    CallExpr  go to state 63


State 60

   41 ReturnStmt: T_Return ';' .

    $default  reduce using rule 41 (ReturnStmt)


State 61

   42 ReturnStmt: T_Return Expr . ';'
   46 Expr: Expr . '+' Expr
   47     | Expr . '-' Expr
   48     | Expr . '*' Expr
   49     | Expr . '/' Expr
   50     | Expr . '%' Expr
   51     | Expr . '>' Expr
   52     | Expr . '<' Expr
   53     | Expr . T_Ge Expr
   54     | Expr . T_Le Expr
   55     | Expr . T_Eq Expr
   56     | Expr . T_Ne Expr
   57     | Expr . T_Or Expr
   58     | Expr . T_And Expr

    T_Le   shift, and go to state 78
    T_Ge   shift, and go to state 79
    T_Eq   shift, and go to state 80
    T_Ne   shift, and go to state 81
    T_And  shift, and go to state 82
    T_Or   shift, and go to state 83
    '<'    shift, and go to state 84
    '>'    shift, and go to state 85
    '+'    shift, and go to state 86
    '-'    shift, and go to state 87
    '*'    shift, and go to state 88
    '/'    shift, and go to state 89
    '%'    shift, and go to state 90
    ';'    shift, and go to state 91


State 62

   61 Expr: ReadInt .

    $default  reduce using rule 61 (Expr)


State 63

   62 Expr: CallExpr .

    $default  reduce using rule 62 (Expr)


State 64

   39 BreakStmt: T_Break ';' .

    $default  reduce using rule 39 (BreakStmt)


State 65

   40 ContinueStmt: T_Continue ';' .

    $default  reduce using rule 40 (ContinueStmt)


State 66

   43 PrintStmt: T_Print '(' . T_StringConstant ')' ';'

    T_StringConstant  shift, and go to state 92


State 67

   27 AssignStmt: T_Identifier '=' . Expr ';'

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 93
    ReadInt   go to state 62
    CallExpr  go to state 63


State 68

   66 Actuals: '(' . ')'
   67        | '(' . _Actuals ')'

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59
    ')'            shift, and go to state 94

    Expr      go to state 95
    ReadInt   go to state 62
    CallExpr  go to state 63
    _Actuals  go to state 96


State 69

   65 CallExpr: T_Identifier Actuals .

    $default  reduce using rule 65 (CallExpr)


State 70

   29 IfStmt: If '(' . Expr ')' Then '{' Stmts '}' EndThen EndIf
   30       | If '(' . Expr ')' Then '{' Stmts '}' EndThen T_Else '{' Stmts '}' EndIf

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 97
    ReadInt   go to state 62
    CallExpr  go to state 63


State 71

   35 WhileStmt: While '(' . Expr ')' Do '{' Stmts '}' EndWhile

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 98
    ReadInt   go to state 62
    CallExpr  go to state 63


State 72

   28 CallStmt: CallExpr ';' .

    $default  reduce using rule 28 (CallStmt)


State 73

   15 Var: Var ',' T_Identifier .

    $default  reduce using rule 15 (Var)


State 74

   64 ReadInt: T_ReadInt '(' . T_StringConstant ')'

    T_StringConstant  shift, and go to state 99


State 75

   46 Expr: Expr . '+' Expr
   47     | Expr . '-' Expr
   48     | Expr . '*' Expr
   49     | Expr . '/' Expr
   50     | Expr . '%' Expr
   51     | Expr . '>' Expr
   52     | Expr . '<' Expr
   53     | Expr . T_Ge Expr
   54     | Expr . T_Le Expr
   55     | Expr . T_Eq Expr
   56     | Expr . T_Ne Expr
   57     | Expr . T_Or Expr
   58     | Expr . T_And Expr
   59     | '-' Expr .

    $default  reduce using rule 59 (Expr)


State 76

   46 Expr: Expr . '+' Expr
   47     | Expr . '-' Expr
   48     | Expr . '*' Expr
   49     | Expr . '/' Expr
   50     | Expr . '%' Expr
   51     | Expr . '>' Expr
   52     | Expr . '<' Expr
   53     | Expr . T_Ge Expr
   54     | Expr . T_Le Expr
   55     | Expr . T_Eq Expr
   56     | Expr . T_Ne Expr
   57     | Expr . T_Or Expr
   58     | Expr . T_And Expr
   60     | '!' Expr .

    $default  reduce using rule 60 (Expr)


State 77

   46 Expr: Expr . '+' Expr
   47     | Expr . '-' Expr
   48     | Expr . '*' Expr
   49     | Expr . '/' Expr
   50     | Expr . '%' Expr
   51     | Expr . '>' Expr
   52     | Expr . '<' Expr
   53     | Expr . T_Ge Expr
   54     | Expr . T_Le Expr
   55     | Expr . T_Eq Expr
   56     | Expr . T_Ne Expr
   57     | Expr . T_Or Expr
   58     | Expr . T_And Expr
   63     | '(' Expr . ')'

    T_Le   shift, and go to state 78
    T_Ge   shift, and go to state 79
    T_Eq   shift, and go to state 80
    T_Ne   shift, and go to state 81
    T_And  shift, and go to state 82
    T_Or   shift, and go to state 83
    '<'    shift, and go to state 84
    '>'    shift, and go to state 85
    '+'    shift, and go to state 86
    '-'    shift, and go to state 87
    '*'    shift, and go to state 88
    '/'    shift, and go to state 89
    '%'    shift, and go to state 90
    ')'    shift, and go to state 100


State 78

   54 Expr: Expr T_Le . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 101
    ReadInt   go to state 62
    CallExpr  go to state 63


State 79

   53 Expr: Expr T_Ge . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 102
    ReadInt   go to state 62
    CallExpr  go to state 63


State 80

   55 Expr: Expr T_Eq . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 103
    ReadInt   go to state 62
    CallExpr  go to state 63


State 81

   56 Expr: Expr T_Ne . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 104
    ReadInt   go to state 62
    CallExpr  go to state 63


State 82

   58 Expr: Expr T_And . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 105
    ReadInt   go to state 62
    CallExpr  go to state 63


State 83

   57 Expr: Expr T_Or . Expr

    T_ReadInt      shift, and go to state 54
    T_IntConstant  shift, and go to state 55
    T_Identifier   shift, and go to state 56
    '-'            shift, and go to state 57
    '!'            shift, and go to state 58
    '('            shift, and go to state 59

    Expr      go to state 106
    ReadInt   go to state 62
    CallExpr  go to state 63


State 84

   52 Expr: Expr '<' . Expr
